tests/semantic/recursive_unions2/recursive_unions2.err
Error: Recursive union A in file recursive_unions2.dl at line 14
.type A = A
^-----------
Error: Recursive union U in file recursive_unions2.dl at line 16
.type U = symbol | U
^--------------------
Error: Recursive union C in file recursive_unions2.dl at line 18
.type C = symbol | D
^--------------------
Error: Recursive union D in file recursive_unions2.dl at line 19
.type D = symbol | C
^--------------------
Error: Recursive union F in file recursive_unions2.dl at line 23
.type F = G
^-----------
Error: Recursive union G in file recursive_unions2.dl at line 24
.type G = H
^-----------
Error: Recursive union H in file recursive_unions2.dl at line 25
.type H = F
^-----------
Error: Symbol constant (type mismatch) in file recursive_unions2.dl at line 28
R("a", "b").
--^----------
Error: Symbol constant (type mismatch) in file recursive_unions2.dl at line 28
R("a", "b").
-------^-----
9 errors generated, evaluation aborted
